2017-01-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79384: Issues in TYPO3 CMS 7 after migration to Doctrine
	* Resolves #79385: Update extension icon to svg
	* Update version to 6.4.1

2017-01-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79359: Migrate PiBaseApi to Doctrine
	* Follow-up to Resolves #79229: Migrate suggest receiver to Doctrine
	* Follow-up to Resolves #79207: Cleanup extension configuration
	* Update version to 6.4.0

2017-01-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79255: Migrate Localization Utility to Doctrine

2017-01-09  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79223: Standardize SQL table definitions
	* Resolves #79035: Update currency of Baltic states
	* Resolves #77245: Add languages "Swiss" and "Austrian"
	* Resolves #77246: Missing extbase declaration for field "static_lang_isocode" in sys_language
	* Follow-up to Resolves #79209: Migrate update script to Doctrine
	* Resolves #79229: Migrate suggest receiver to Doctrine
	* Follow-up to Resolves #79209: Migrate update script to Doctrine
	* Resolves #79230: Migrate ProcessDataMap hook to Doctrine
	* Resolves #79231: Drop character set conversions

2017-01-08  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79207: Cleanup extension configuration
	* Resolves #79209: Migrate update script to Doctrine
	* Resolves #79210: Migrate AbstractEntityRepository to Doctrine

2017-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Cleanup ManagerController.php
	* Cleanup SelectViewHelper.php
	* Migrate DatabaseUpdateUtility to Doctrine

2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79192: Remove constant PATH_BE_staticinfotables_rel
	* Require TYPO3 CMS 7.6.0
	* Follow-up to #79174: Let the SelectViewHelper accept correct values
	* Resolves #79193: Drop renderMode argument from flash message view helper

2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>
